--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,27 @@
 version: '3.8'
+
 services:
   backend:
     build:
-      context: ./backend
-      dockerfile: Dockerfile
-    env_file:
-      - ./config/.env
+      context: .
+      dockerfile: backend/Dockerfile
     ports:
       - "8000:8000"
+    env_file:
+      - config/.env
     depends_on:
       - llm-agent
+
+  llm-agent:
+    build:
+      context: ./agents/llm-agent
+      dockerfile: Dockerfile
+    ports:
+      - "5080:5080"
+    # Inherit the OPENAI_API_KEY from your host environment.
+    # You can also specify this in a .env file or override it as needed.
+    env_file:
+      - config/.env
 
   frontend:
     build:
@@ -29,5 +41,3 @@ services:
     depends_on:
       - frontend
       - backend
-
-
