--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,10 +3,10 @@ server {
     server_name localhost;
 
     location / {
-        proxy_pass http://frontend-service;
+        proxy_pass http://frontend:80;
     }
 
     location /api/ {
-        proxy_pass http://backend-service;
+        proxy_pass http://backend:8000;
     }
 }
