--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,37 +22,7 @@ services:
     env_file:
       - config/.env
 
-  weaviate:
-    image: semitechnologies/weaviate:latest
-    ports:
-      - "8080:8080"
-      - "50051:50051"
-    environment:
-      QUERY_DEFAULTS_LIMIT: 20
-      AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: "true"
-      PERSISTENCE_DATA_PATH: "./data"
-      DEFAULT_VECTORIZER_MODULE: "text2vec-openai"
-      ENABLE_MODULES: "text2vec-openai"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/v1/.well-known/ready"]
-      interval: 15s
-      timeout: 5s
-      retries: 5
-    env_file:
-      - config/.env
-
-  weaviate-agent:
-    build:
-      context: ./knowledge-base/weaviate-agent
-      dockerfile: Dockerfile
-    ports:
-      - "8001:8001"
-    depends_on:
-      weaviate:
-        condition: service_healthy
-    env_file:
-      - config/.env
-
+  
   frontend:
     build:
       context: ./frontend
@@ -72,3 +42,40 @@ services:
       - frontend
       - backend
   
+  weaviate:
+    image: semitechnologies/weaviate:latest
+    ports:
+      - "8080:8080"
+      - "50051:50051"
+    environment:
+      QUERY_DEFAULTS_LIMIT: 20
+      AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: "true"
+      PERSISTENCE_DATA_PATH: "./data"
+      DEFAULT_VECTORIZER_MODULE: "text2vec-openai"
+      ENABLE_MODULES: "text2vec-openai"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/v1/.well-known/live"]
+      interval: 15s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+    env_file:
+      - config/.env
+
+  weaviate-agent:
+    build:
+      context: ./knowledge-base/weaviate-agent
+      dockerfile: Dockerfile
+    ports:
+      - "8001:8001"
+    depends_on:
+      - weaviate
+    env_file:
+      - config/.env
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8001/docs"]
+      interval: 15s
+      timeout: 5s
+      retries: 5
+    
+
