--- a/knowledge-base/weaviate-agent/Dockerfile
+++ b/knowledge-base/weaviate-agent/Dockerfile
@@ -5,6 +5,8 @@ WORKDIR /weaviate-agent
 # Copy the requirements and install them
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir weaviate-client
+RUN pip install --upgrade --no-cache-dir weaviate-client
 
 # Copy the application code
 COPY . .
